--- a/templates/admin_panel/printer_settings.html
+++ b/templates/admin_panel/printer_settings.html
@@ -89,6 +89,19 @@
     "api_token": "{{ api_token|default:'YOUR_TOKEN_HERE' }}",
     "poll_interval": 5
 }</code></pre>
+                                
+                                <hr>
+                                <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
+                                    <div>
+                                        <h6 class="mb-1"><i class="fas fa-download text-success"></i> Download Print Client</h6>
+                                        <small class="text-muted">Windows application - No Python installation required</small>
+                                    </div>
+                                    <a href="{% static 'downloads/PrintClient_Windows.zip' %}" 
+                                       class="btn btn-success" 
+                                       download>
+                                        <i class="fas fa-download"></i> Download PrintClient.zip (15 MB)
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
